[+] fix transaction action spacing

--- a/src/sharedComponents/TxActionBlock/txActionBlock.scss
+++ b/src/sharedComponents/TxActionBlock/txActionBlock.scss
@@ -1,4 +1,5 @@
 .token-action-block,
-.nft-action-block {
+.nft-action-block,
+.collection-action-block {
   display: contents;
 }
